# PythonAPIGenWithTest

./: EligibilityApiClient.py  README.md  generate_sdk.py  requirements.txt  test_sdk.py
gen_eligibility_api/: README.md  pyproject.toml
gen_eligibility_api/eligibility_verification_api_client/: __init__.py
gen_eligibility_api/eligibility_verification_api_client/api/default/: verify_eligibility.py
gen_eligibility_api/eligibility_verification_api_client/models/: __init__.py  verify_eligibility_body.py  verify_eligibility_response_200.py
